# news-desk

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/data/: demoData.ts
src/services/: database.ts  rules.ts  schedule.ts  tauriBridge.ts
tests/: rules.test.ts  schedule.test.ts
